# server/utils/Swagger/favorites.yaml
@@ -221,3 +221,69 @@ components:
         error:
           type: string
           description: Tipo de error
+
+
+  /movieapp/v1/reviews/delete-favorites/:favoriteId:
+    delete:
+      tags:
+        - Favorites
+      summary: Eliminar favorito
+      parameters:
+        - name: favoriteId
+          in: path
+          required: true
+          schema:
+            type: string
+          description: ID del favorito a eliminar
+      responses:
+        200:
+          description: Favorito eliminado correctamente
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Movie'
+              examples:
+                respuestaExitosa:
+                  summary: Respuesta exitosa
+                  value:
+                    imdbID: "tt1234567"
+                    Title: "Ejemplo de Película"
+                    Poster: "https://image.tmdb.org/t/p/w500/example.jpg"
+        400:
+          description: Error en la solicitud
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                errorCliente:
+                  summary: Falta el userId
+                  value:
+                    message: "El parámetro userId es requerido"
+                    error: "Bad Request"
+        403:
+          description: Acceso prohibido
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              examples:
+                accesoProhibido:
+                  summary: Usuario sin permisos
+                  value:
+                    message: "No tienes permiso para ver estos favoritos"
+                    error: "Forbidden"
+        500:
+          description: Error interno del servidor
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              examples:
+                errorInterno:
+                  summary: Error inesperado
+                  value:  
+                    message: "Error inesperado en el servidor"
+                    error: "Internal Server Error"  
+                    
+                            
